# demo_insights_share

./: .demoenv  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDEFAST_USAGE.md  FEATURES.md  README.md  TODOS.md  export_template.txt  index.html  proposal.md  proposal_conflict_design.md  proposal_wiki_card.md  report.zh.html  save_plan_in_project.txt  start.claude.sh  start.codex.sh  start.demo.sh  upload_plan.md  validation.md  validation_AB.md
insights-share/: .gitignore  plan.md  pyproject.toml
insights-share/demo_codes/: .coverage  .env.example  .gitignore  adapter.py  insights_cli.py  run_demo.sh  search_agent.py  test_latency_cache.py  test_local_search.py  test_search_agent_priority.py  test_search_http_integration.py  test_search_ranking.py
insights-share/demo_docs/: design.md  pm_walkthrough.md  pm_walkthrough_star.md  terminal_snapshot.md
insights-share/plugin/: README.md
insights-share/release/: README.txt  build_release.py
insights-share/validation/: check_wiki_layers.py  conftest.py  guide_loop.sh  migrate_add_topic_fields.py  migrate_wiki_to_tree.py  minimax_smoke.py  package-lock.json  package.json  phase2_bob_session.sh  phase3_crud.sh  run_adoption_proof.sh  run_all_validations.sh  run_ci_gate.sh  run_contract_tests.sh  run_start_tmux_smoke.sh  server_host_demo.sh  start_demo_driver.sh  test_ab_demo_plan.py  test_adoption_proof.py  test_ci_gate.py  test_cli_api.py  test_examples_demo_scripts.py  test_handout_api.py  test_handout_record_artifact.py  test_plugin_contract.py  test_preview_api.py  test_release_package.py  test_runtime_store.py  (+14 more)
(+490 files in other folders)
